data/derived/fa15/progs/unify/prog1278.ml.out
Characters 321-323:
  union f1 (del x e2)
                  ^^
Error: This expression has type expr but an expression was expected of type
         string set
